# cb_davidson

./: CMakeLists.txt  README.md  Readme.md  job.sh  job3.sh
DEVMEMLIB/: CMakeLists.txt  device_memcpy.f90  device_memcpy_interf.f90  device_memcpy_mod.f90  device_memset_async.f90  device_memset_async_interface.f90
FFTXlib/src/: CMakeLists.txt  fft_fwinv.f90  fft_scalar.cuFFT.f90
KS_Solvers/: CMakeLists.txt
KS_Solvers/Davidson/: cegterg.f90
LAXlib/: CMakeLists.txt  cdiaghg.f90  laxlib_cusolver_handle_mod.f90
UtilXlib/: clocks_handler.f90
cbToy/: CMakeLists.txt  cb_davidson_main.f90  my_h_psi_wrapper.f90
cbToy/cb_lib/: CMakeLists.txt  cb_module.f90  ggen.f90  init_k.f90  init_random_wfcs.f90  input.f90  set_cb_potential.f90
cbToy/cb_operators/: CMakeLists.txt  cb_g_psi.f90  cb_g_psi_batched.f90  cb_s_psi_batched.f90  my_h_psi.f90  my_h_psi_batched.f90
examples/: free.in  si.in  si2.in  si2_11_points.in  si4.in
examples_of_routines/: my_h_psi.f90
